# Game-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/modules/: CommonOptions.cmake
editor/: CMakeLists.txt  Editor.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  FsDefs.hpp  Logger.hpp
src/wcm/: CMakeLists.txt
src/wcm/glfw/: WIndow.hpp  Window.cpp  WindowManager.cpp  WindowManager.hpp
src/wcm/windows/: WIndow.hpp  Window.cpp  WindowManager.cpp  WindowManager.hpp
